--- a/programs/hyprpanel/config.json
+++ b/programs/hyprpanel/config.json
@@ -27,6 +27,7 @@
       ],
       "right": [
         "volume",
+        "kbinput",
         "network",
         "bluetooth",
         "systray",
@@ -445,5 +446,9 @@
   "theme.bar.buttons.y_margins": "0.2em",
   "bar.launcher.autoDetectIcon": false,
   "theme.bar.margin_top": "0.2em",
-  "theme.bar.margin_sides": "0.2em"
+  "theme.bar.margin_sides": "0.2em",
+  "bar.media.show_active_only": true,
+  "bar.workspaces.showWsIcons": false,
+  "bar.workspaces.workspaceMask": false,
+  "bar.workspaces.showApplicationIcons": false
 }
